--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="welcome-container">
   <h1>Welcome to TagManagerApp</h1>
   <div class="button-group">
-    <button routerLink="/register">User Register</button>
+    <!-- <button routerLink="/register">User Register</button> -->
     <button routerLink="/login">User Login</button>
   </div>
 </div>
