--- a/FrontEnd/src/app/auto-write-tags/auto-write-tags.component.html
+++ b/FrontEnd/src/app/auto-write-tags/auto-write-tags.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Fixed Header -->
   <div class="header">
-    <h2>Auto Write Tags</h2>
+    <h2>Auto Write Tags for connnection : {{ connection?.name }} ({{ connection?.ipAddress }})</h2>
     <div class="button-group">
       <button class="back-button" (click)="goBack()">Back</button>
     </div>
