--- a/FrontEnd/src/app/user-management/user-management.component.scss
+++ b/FrontEnd/src/app/user-management/user-management.component.scss
@@ -189,6 +189,7 @@
       background-color: rgba(0, 0, 0, 0.4);
 
       th {
+        position: sticky;
         color: aqua;
         font-size: 19px;
         padding: 12px 0;
@@ -200,8 +201,9 @@
     tbody {
       td {
         padding: 12px 0;
-        padding-left: 109px;
+        padding-left: 119px;
         color: white;
+        font-size: 12px;
         text-align: left;
       }
 
@@ -216,7 +218,7 @@
     overflow-y: auto;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(6px);
-    border-radius: 12px;
+    border-radius: 2px;
   }
 
   .delete-btn {
