--- a/FrontEnd/src/app/tag-value-history/tag-value-history.component.scss
+++ b/FrontEnd/src/app/tag-value-history/tag-value-history.component.scss
@@ -4,19 +4,50 @@
   flex-direction: column;
   overflow: hidden;
 
-  .heading {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #fff;
-    padding: 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-    z-index: 1000;
-    border-bottom: 1px solid #ccc;
-    text-align: center;
-  }
+  // .heading {
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   right: 0;
+  //   background-color: #9af7cd;;
+  //   padding: 1rem;
+  //   font-size: 1.5rem;
+  //   font-weight: bold;
+  //   z-index: 1000;
+  //   border-bottom: 1px solid #ccc;
+  //   text-align: center;
+  // }
+  .header {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #9af7cd;
+  color: #007bff;
+  width: 98%;
+  padding: 10px 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 900;
+}
+
+  .back-button {
+      padding: 0.7rem 2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 7px;
+      background-color: #d3af2f;
+      color: white;
+      cursor: pointer;      
+
+      &:hover {
+        background-color: #f4be36;
+        color:brown
+      }
+    }
 
   .content-padding {
     padding-top: 4rem; // room for heading
