--- a/FrontEnd/src/app/schedule-reading/schedule-reading.component.scss
+++ b/FrontEnd/src/app/schedule-reading/schedule-reading.component.scss
@@ -51,7 +51,7 @@
       gap: 16px;
 
       .stop-button {
-        padding: 8px 20px;
+        padding: 0.7rem 2rem;
         font-size: 0.95rem;
         font-weight: 500;
         border: none;
@@ -68,19 +68,19 @@
       }
 
       .back-button {
-        padding: 8px 20px;
-        font-size: 0.95rem;
-        font-weight: 500;
+        background-color: #d3af2f;;
+        color: white;
         border: none;
-        border-radius: 6px;
-        background-color: #ffc107;
-        color: #212529;
+        padding: 0.7rem 2rem;
+        border-radius: 7px;
+        font-size: 16px;
         cursor: pointer;
-        transition: all 0.2s ease;
-        
+        flex-shrink: 0;
+        margin-right: 30px;
+
         &:hover {
-          background-color: #ffca2c;
-          box-shadow: 0 2px 4px rgba(255, 193, 7, 0.3);
+          background-color: #f4be36;
+          color:brown
         }
       }
     }
