--- a/FrontEnd/src/app/tag-manager/tag-manager.component.html
+++ b/FrontEnd/src/app/tag-manager/tag-manager.component.html
@@ -21,7 +21,8 @@
         <span *ngIf="!connection">No Connection</span>
       </div>
       <div class="right-controls">
-        <button class="scheduler" (click)="navigateToScheduler()">Scheduler</button>
+        <button class="inter-scheduler" (click)="navigateToInterScheduler()">InterScheduler</button>
+        <!-- <button class="scheduler" (click)="navigateToScheduler()">Scheduler</button> -->
         <button class="read-tags" (click)="navigateToReadTags()">Read Tags</button>
         <button class="write-tags" (click)="navigateToWriteTags()">Write Tags</button>
       </div>
